--- a/demo_email/appsettings.json
+++ b/demo_email/appsettings.json
@@ -2,7 +2,7 @@
   "EmailSettings": {
     "SmtpServer": "smtp.gmail.com",
     "Port": 587,
-    "SenderName": "Dinh Thanh Hoai",
+    "SenderName": "Project X",
     "SenderEmail": "hoaikcn7@gmail.com",
     "Username": "hoaikcn7@gmail.com",
     "Password": "apppasswords"
